[package]
name = "substrate-load-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
bs58 = { version = "0.4.0" }
subxt = "0.35.0"
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }
subxt-signer = { version = "0.35.0", features = ["subxt"]}
primitive-types = { version = "0.12.1", default-features = false }
sp-arithmetic = { version = "16.0.0", default-features = false, features = ["serde"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
starknet-crypto = { version = "0.6.0", default-features = false }
hex = {version ="0.4.3", default-features=false, features = ["alloc"]}
starknet-core = { version = "0.5.0", default-features = false }
starknet-ff = { version = "0.3.4", default-features = false }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/substrate.git", default-features = true, branch = "polkadot-v1.0.0" }
clap = "2.33"
chrono = "0.4.37"
secp256k1 = { version = "0.24.0", default-features = false, features = ["recovery", "alloc"]}
sp-core-hashing = { version = "9.0.0", default-features = false}
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "sp-arithmetic/std",
]
